Kubernetes/8.Ingress/1.basic/ingress-basic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
  - host: foo.bar.com
    http:
      paths:
      - path: /foos1  # foo.bar.com/foos1
        backend: 
          serviceName: s1
          servicePort: 80
      - path: /bars2  # foo.bar.com/bars2
        backend:
          serviceName: s2
          servicePort: 80
  - host: bar.foo.com # bar.foo.com
    http:
      paths:
      - backend:
          serviceName: s2
          servicePort: 80
